@@ -94,6 +94,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed contrib/autogroup LDAP URI with attribute filter (ITS#6536)
 	Fixed contrib/autogroup install location (ITS#6684)
 	Fixed contrib/autogroup crash with ppolicy (ITS#6684)
+	Fixed contrib/cloak callbacks (ITS#6762)
 	Fixed contrib/nssov to only close socket on shutdown (ITS#6676)
 	Fixed contrib/nssov multi platform support (ITS#6604)
 	Build Environment
